# meu_estoque

./: CMakeLists.txt  main.cpp  main.qml
adapter/: itemadapter.cpp  itemadapter.h
data/: databaseconnection.cpp
data/database/: database.cpp  database.h  databaseconnection.h
data/mapper/: itemmapper.cpp  itemmapper.h
data/repository/: estoquerepository.cpp  estoquerepository.h
entity/: item.cpp  item.h
factory/: itemfactory.cpp  itemfactory.h
model/: estoquemodel.cpp  estoquemodel.h
qml/components/: Card.qml  ItemVolumeController.qml
qml/screens/: AddItemScreen.qml  HomeScreen.qml
use_case/: cadastrodeitemusecase.cpp  cadastrodeitemusecase.h  getestoqueusecase.cpp  getestoqueusecase.h  listagemdeitensusecase.cpp  listagemdeitensusecase.h  setitemvolumeusecase.cpp  setitemvolumeusecase.h
